syntax = "proto3";

package migration;

service MigrationService{
    rpc MigrationCustomer (ChangeIdDto) returns (Respon);
    rpc MigrationGeneralCustomer(ChangeIdDto) returns (Respon);
    rpc MigrationLab (ChangeIdDto) returns (Respon);
    rpc AddActsCusromerReference (stream AddActDto) returns (Null);
    rpc AddActsGeneralCusromerReference (stream AddActDto) returns (Null);
    rpc AddActsLabReference (stream AddActDto) returns (Null);
}

message ChangeIdDto {
    string newId = 1;
    string oldId = 2;
}

message Respon {
    string respon = 1;
}

message AddActDto {
    string actId = 1;
    string contractorId = 2;
}

message Null {}